Changes for vlcj-4